# HoudiniUsdBridge

./: CMakeLists.txt  README.md  license.txt
cmake/: FindUSD.cmake
src/: CMakeLists.txt
src/dummylib/: CMakeLists.txt  dummy.C  dummy.h  dummyapi.h
src/houdini/custom/RAY/BRAY_HdKarma/: BRAY_HdAOVBuffer.C  BRAY_HdAOVBuffer.h  BRAY_HdCamera.C  BRAY_HdCamera.h  BRAY_HdCoordSys.C  BRAY_HdCoordSys.h  BRAY_HdCurves.C  BRAY_HdCurves.h  BRAY_HdDelegate.C  BRAY_HdDelegate.h  BRAY_HdEncodeJSON.C  BRAY_HdEncodeJSON.h  BRAY_HdField.C  BRAY_HdField.h  BRAY_HdFormat.h  BRAY_HdGT.h  BRAY_HdIO.h  BRAY_HdInstancer.C  BRAY_HdInstancer.h  BRAY_HdKarma.C  BRAY_HdKarma.h  BRAY_HdLight.C  BRAY_HdLight.h  BRAY_HdLightFilter.C  BRAY_HdLightFilter.h  BRAY_HdMaterial.C  BRAY_HdMaterial.h  BRAY_HdMaterialNetwork.C  BRAY_HdMaterialNetwork.h  BRAY_HdMesh.C  BRAY_HdMesh.h  BRAY_HdParam.C  BRAY_HdParam.h  BRAY_HdPass.C  BRAY_HdPass.h  BRAY_HdPointPrim.C  BRAY_HdPointPrim.h  BRAY_HdPreviewMaterial.C  BRAY_HdPreviewMaterial.h  BRAY_HdTokens.C  (+7 more)
src/houdini/custom/RAY/BRAY_SdrKarma/: BRAY_SdrKarma.C  BRAY_SdrKarma.h  CMakeLists.txt  CMakeSources.cmake
src/houdini/custom/RAY/BRAY_SdrKarmaDiscovery/: BRAY_SdrKarmaDiscovery.C  BRAY_SdrKarmaDiscovery.h  CMakeLists.txt  CMakeSources.cmake
src/houdini/custom/RAY/BRAY_SdrKarmaParser/: BRAY_SdrKarmaParser.C  BRAY_SdrKarmaParser.h  CMakeLists.txt  CMakeSources.cmake
src/houdini/custom/USD/: CMakeLists.txt  CMakeSources.cmake  FS_ArResolver.C  FS_ArResolver.h  GEO_Boost.h  GEO_FileData.C  GEO_FileData.h  GEO_FileFieldValue.h  GEO_FileFormat.C  GEO_FileFormat.h  GEO_FilePrim.C  GEO_FilePrim.h  GEO_FilePrimAgentUtils.C  GEO_FilePrimAgentUtils.h  GEO_FilePrimInstancerUtils.C  GEO_FilePrimInstancerUtils.h  GEO_FilePrimUtils.C  GEO_FilePrimUtils.h  GEO_FilePrimVolumeUtils.C  GEO_FilePrimVolumeUtils.h  GEO_FileProp.C  GEO_FileProp.h  GEO_FilePropSource.C  GEO_FilePropSource.h  GEO_FileRefiner.C  GEO_FileRefiner.h  GEO_FileUtils.C  GEO_FileUtils.h  GEO_HAPIAttribute.C  GEO_HAPIAttribute.h  GEO_HAPIGeo.C  GEO_HAPIGeo.h  GEO_HAPIPart.C  GEO_HAPIPart.h  GEO_HAPIReader.C  GEO_HAPIReader.h  GEO_HAPIReaderCache.C  GEO_HAPIReaderCache.h  GEO_HAPISessionManager.C  GEO_HAPISessionManager.h  (+19 more)
src/houdini/custom/USD/usd_plugins/arHFs/resources/: plugInfo.json
src/houdini/custom/USD/usd_plugins/hdHoudini/resources/: plugInfo.json
src/houdini/custom/USD/usd_plugins/usdHDA/resources/: plugInfo.json
src/houdini/custom/USDFS/: CMakeLists.txt  CMakeSources.cmake  FS_UsdzReaderHelper.C  FS_UsdzReaderHelper.h
src/houdini/custom/USDOP/: CMakeLists.txt  CMakeSources.cmake  HUSD_FieldWrapper.C  HUSD_FieldWrapper.h  HUSD_LopStageFactory.C  HUSD_LopStageFactory.h  HUSD_VolumeWrapper.C  HUSD_VolumeWrapper.h  OBJ_LOP.C  OBJ_LOP.h  OBJ_LOPCamera.C  OBJ_LOPCamera.h  SOP_CustomTraversal.C  SOP_CustomTraversal.h  SOP_LOP-2.0.C  SOP_LOP-2.0.h  SOP_LOP.C  SOP_LOP.h  SOP_UnpackUSD-2.0.C  SOP_UnpackUSD-2.0.h  SOP_UnpackUSD.C  SOP_UnpackUSD.h  XUSD_SelectionRuleAutoCollection.C  XUSD_SelectionRuleAutoCollection.h  plugin.C
src/houdini/custom/USDSopVol/: CMakeLists.txt  USD_SopVolumeExtract.C
src/houdini/custom/USDUI/: CMakeLists.txt  CMakeSources.cmake  HD_DrawModeAdapter.C  HD_DrawModeAdapter.h  HD_HoudiniRendererPlugin.h  HD_MetaCurvesAdapter.C  HD_MetaCurvesAdapter.h  RE_Wrapper.C  RE_Wrapper.h  XUSD_ImagingEngineGL.C  XUSD_ImagingEngineGL.h  plugin.C
src/houdini/lib/H_USD/HUSD/: CMakeLists.txt  CMakeSources.cmake  HUSD_API.h  HUSD_Asset.C  HUSD_Asset.h  HUSD_AssetPath.C  HUSD_AssetPath.h  HUSD_BindMaterial.C  HUSD_BindMaterial.h  HUSD_Blend.C  HUSD_Blend.h  HUSD_Bucket.h  HUSD_ChangeBlock.C  HUSD_ChangeBlock.h  HUSD_Compositor.h  HUSD_ConfigureLayer.C  HUSD_ConfigureLayer.h  HUSD_ConfigurePrims.C  HUSD_ConfigurePrims.h  HUSD_ConfigureProps.C  HUSD_ConfigureProps.h  HUSD_Constants.C  HUSD_Constants.h  HUSD_CreateMaterial.C  HUSD_CreateMaterial.h  HUSD_CreatePrims.C  HUSD_CreatePrims.h  HUSD_CreateVariants.C  HUSD_CreateVariants.h  HUSD_Cvex.C  HUSD_Cvex.h  HUSD_CvexBindingMap.C  HUSD_CvexBindingMap.h  HUSD_CvexCode.C  HUSD_CvexCode.h  HUSD_CvexDataCommand.C  HUSD_CvexDataCommand.h  HUSD_CvexDataInputs.C  HUSD_CvexDataInputs.h  HUSD_DataHandle.C  (+232 more)
src/houdini/lib/H_USD/HUSD/UsdHoudini/: CMakeLists.txt  CMakeSources.cmake  README.md  __init__.py  api.h  generatedSchema.usda  houdiniCameraPlateAPI.cpp  houdiniCameraPlateAPI.h  houdiniEditableAPI.cpp  houdiniEditableAPI.h  houdiniFieldAsset.cpp  houdiniFieldAsset.h  houdiniLayerInfo.cpp  houdiniLayerInfo.h  houdiniMetaCurves.cpp  houdiniMetaCurves.h  houdiniProceduralAPI.cpp  houdiniProceduralAPI.h  houdiniSelectableAPI.cpp  houdiniSelectableAPI.h  houdiniViewportGuideAPI.cpp  houdiniViewportGuideAPI.h  houdiniViewportLightAPI.cpp  houdiniViewportLightAPI.h  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda  tokens.cpp  tokens.h  wrapHoudiniCameraPlateAPI.cpp  wrapHoudiniEditableAPI.cpp  wrapHoudiniFieldAsset.cpp  wrapHoudiniLayerInfo.cpp  wrapHoudiniMetaCurves.cpp  wrapHoudiniProceduralAPI.cpp  wrapHoudiniSelectableAPI.cpp  wrapHoudiniViewportGuideAPI.cpp  wrapHoudiniViewportLightAPI.cpp  wrapTokens.cpp
src/houdini/lib/H_USD/HUSD/testhusd/: TESTHUSD_Path.C  TESTHUSD_PathSet.C  TESTXUSD_Utils.C  testhusd.C
src/houdini/lib/H_USD/gusd/: CMakeSources.cmake  GEO_IOTranslator.cpp  GEO_IOTranslator.h  GT_OldPointInstancer.h  GT_PackedUSD.cpp  GT_PackedUSD.h  GT_PointInstancer.h  GT_PrimCache.cpp  GT_PrimCache.h  GT_Utils.cpp  GT_Utils.h  GT_VtArray.h  GT_VtStringArray.h  GU_PackedUSD.cpp  GU_PackedUSD.h  GU_USD.cpp  GU_USD.h  NURBSCurvesWrapper.cpp  NURBSCurvesWrapper.h  OP_ParmChangeMicroNode.cpp  OP_ParmChangeMicroNode.h  PRM_Shared.cpp  USD_CustomTraverse.cpp  USD_CustomTraverse.h  USD_DataCache.cpp  USD_StdTraverse.cpp  USD_StdTraverse.h  USD_ThreadedTraverse.h  USD_Traverse.h  USD_TraverseSimple.h  USD_Utils.cpp  USD_Utils.h  USD_VisCache.cpp  USD_VisCache.h  USD_XformCache.cpp  USD_XformCache.h  UT_CappedCache.h  UT_Gf.h  UT_StaticInit.h  UT_TypeTraits.cpp  (+52 more)
src/houdini/lib/H_USD/gusd/_gusd/: CMakeLists.txt
(+7 files in other folders)
